# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmapper-ultra"
version = "1.0.0"
description = "Advanced Nmap Automation & Reporting"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0",
    "tqdm>=4.64",
    "jinja2>=3.1",
    "typer[all]>=0.9",
    "lxml>=4.9",
    "netaddr>=0.8",
]

[project.optional-dependencies]
test = ["pytest", "hypothesis"]

[project.scripts]
nmapper-ultra = "nmapper_ultra.cli:app"
